{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 60,
  "lineage": "62784b93-5cfb-cb58-beb6-56d020ad7f69",
  "resources": [
    {
      "module": "module.ec2_wordpress",
      "mode": "data",
      "type": "aws_subnet",
      "name": "exist_subnet_details",
      "provider": "module.ec2_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0a0df20feddbf3376",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:subnet/subnet-0a0df20feddbf3376",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0df20feddbf3376",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248189943700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Subnet-4-agd"
            },
            "vpc_id": "vpc-002427d5be38383d7"
          }
        }
      ]
    },
    {
      "module": "module.ec2_wordpress",
      "mode": "data",
      "type": "aws_subnet",
      "name": "existing_subnet_details",
      "provider": "module.ec2_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-010b6eeb2c340a4ed",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:subnet/subnet-010b6eeb2c340a4ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010b6eeb2c340a4ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248189943700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-002427d5be38383d7"
          }
        },
        {
          "index_key": "subnet-030a9c008a57ac5a2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:subnet/subnet-030a9c008a57ac5a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030a9c008a57ac5a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248189943700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-002427d5be38383d7"
          }
        },
        {
          "index_key": "subnet-06289d5ecb2c8668a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:subnet/subnet-06289d5ecb2c8668a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 4085,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06289d5ecb2c8668a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248189943700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-002427d5be38383d7"
          }
        },
        {
          "index_key": "subnet-0a0df20feddbf3376",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:subnet/subnet-0a0df20feddbf3376",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0df20feddbf3376",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248189943700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Subnet-4-agd"
            },
            "vpc_id": "vpc-002427d5be38383d7"
          }
        }
      ]
    },
    {
      "module": "module.ec2_wordpress",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.ec2_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:vpc/vpc-002427d5be38383d7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-057161347787c24d5",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-08929275b8ac13244",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002427d5be38383d7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-028b84fc0a09defeb",
            "owner_id": "248189943700",
            "tags": {
              "Name": "Default vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_wordpress",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "module.ec2_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07db896e164bc4476",
            "arn": "arn:aws:ec2:eu-west-3:248189943700:instance/i-08d4427261b66c7ad",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d4427261b66c7ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-name-agd",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08074e6b8224a0194",
            "private_dns": "ip-172-31-54-69.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.54.69",
            "public_dns": "ec2-13-38-23-210.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.23.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2433365d9e6ed5f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "stb-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0df20feddbf3376",
            "tags": {
              "Name": "Wordpress-agd"
            },
            "tags_all": {
              "Name": "Wordpress-agd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033223af7636223e0"
            ]
          },
          "dependencies": [
            "module.ec2_wordpress.aws_key_pair.key",
            "module.ec2_wordpress.aws_security_group.ec2_sg",
            "module.ec2_wordpress.aws_subnet.next_subnet",
            "module.ec2_wordpress.data.aws_availability_zones.available",
            "module.ec2_wordpress.data.aws_subnet.exist_subnet_details",
            "module.ec2_wordpress.data.aws_subnet.existing_subnet_details",
            "module.ec2_wordpress.data.aws_subnets.exist_subnet",
            "module.ec2_wordpress.data.aws_subnets.existing_subnets",
            "module.ec2_wordpress.data.aws_vpc.default",
            "module.ec2_wordpress.data.external.next_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_wordpress",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "module.ec2_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:security-group/sg-033223af7636223e0",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033223af7636223e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stb-ec2-sg",
            "name_prefix": "",
            "owner_id": "248189943700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg-agd"
            },
            "tags_all": {
              "Name": "ec2-sg-agd"
            },
            "timeouts": null,
            "vpc_id": "vpc-002427d5be38383d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_wordpress.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_wordpress",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "module.ec2_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:security-group/sg-0db41a052fba68d3a",
            "description": "Security group for MySQL RDS",
            "egress": [],
            "id": "sg-0db41a052fba68d3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033223af7636223e0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "stb-rds-sg",
            "name_prefix": "",
            "owner_id": "248189943700",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg-agd"
            },
            "tags_all": {
              "Name": "rds-sg-agd"
            },
            "timeouts": null,
            "vpc_id": "vpc-002427d5be38383d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_wordpress.aws_security_group.ec2_sg",
            "module.ec2_wordpress.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_wordpress",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "next_subnet",
      "provider": "module.ec2_wordpress.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:248189943700:subnet/subnet-0a0df20feddbf3376",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0df20feddbf3376",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248189943700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-4-agd"
            },
            "tags_all": {
              "Name": "Subnet-4-agd"
            },
            "vpc_id": "vpc-002427d5be38383d7"
          },
          "dependencies": [
            "module.ec2_wordpress.data.aws_availability_zones.available",
            "module.ec2_wordpress.data.aws_subnet.exist_subnet_details",
            "module.ec2_wordpress.data.aws_subnet.existing_subnet_details",
            "module.ec2_wordpress.data.aws_subnets.exist_subnet",
            "module.ec2_wordpress.data.aws_subnets.existing_subnets",
            "module.ec2_wordpress.data.aws_vpc.default",
            "module.ec2_wordpress.data.external.next_subnet"
          ]
        }
      ]
    }
  ]
}